@@ -6,7 +6,6 @@ ACE_RCSID (tao,
            PICurrent,
            "$Id$")
 
-
 #if !defined (__ACE_INLINE__)
 # include "tao/PI/PICurrent.inl"
 #endif /* __ACE_INLINE__ */
@@ -22,8 +21,8 @@ TAO_BEGIN_VERSIONED_NAMESPACE_DECL
 
 TAO::PICurrent::PICurrent (TAO_ORB_Core &orb_core)
   : orb_core_ (orb_core),
-    tss_slot_ (0),
-    slot_count_ (0)
+    tss_slot_ (0), // Call initialize() before use.
+    slot_count_ (0) // Call initialize() before use.
 {
 }
 
@@ -40,14 +39,7 @@ TAO::PICurrent::get_slot (PortableInterceptor::SlotId identifier
   this->check_validity (identifier ACE_ENV_ARG_PARAMETER);
   ACE_CHECK_RETURN (0);
 
-  PICurrent_Impl *impl = this->tsc ();
-
-  if (impl == 0)
-    ACE_THROW_RETURN (CORBA::BAD_INV_ORDER (CORBA::OMGVMCID | 14,
-                                            CORBA::COMPLETED_NO),
-                      0);
-
-  return impl->get_slot (identifier ACE_ENV_ARG_PARAMETER);
+  return this->tsc ()->get_slot (identifier ACE_ENV_ARG_PARAMETER);
 }
 
 void
@@ -60,14 +52,14 @@ TAO::PICurrent::set_slot (PortableInterceptor::SlotId identifier,
   this->check_validity (identifier ACE_ENV_ARG_PARAMETER);
   ACE_CHECK;
 
-  PICurrent_Impl *impl = this->tsc ();
-
-  if (impl == 0)
-    ACE_THROW (CORBA::BAD_INV_ORDER (CORBA::OMGVMCID | 14,
-                                     CORBA::COMPLETED_NO));
-
-  impl->set_slot (identifier, data ACE_ENV_ARG_PARAMETER);
+  this->tsc ()->set_slot (identifier, data ACE_ENV_ARG_PARAMETER);
   ACE_CHECK;
+}
+
+void
+TAO::PICurrent::cleanup (void *object, void *)
+{
+  delete static_cast<TAO::PICurrent_Impl *> (object);
 }
 
 TAO::PICurrent_Impl *
@@ -77,6 +69,20 @@ TAO::PICurrent::tsc (void)
     static_cast<TAO::PICurrent_Impl *> (
       this->orb_core_.get_tss_resource (this->tss_slot_));
 
+  // If this TSS has not yet been set-up, give it it's own PICurrent_Impl.
+  if (0 == impl)
+  {
+    ACE_NEW_THROW_EX (impl,
+                      TAO::PICurrent_Impl,
+                      CORBA::NO_MEMORY (
+                        CORBA::SystemException::_tao_minor_code (
+                          TAO::VMCID,
+                          ENOMEM),
+                        CORBA::COMPLETED_NO));
+
+    this->orb_core_.set_tss_resource (this->tss_slot_, impl);
+  }
+
   return impl;
 }
 
@@ -84,6 +90,13 @@ void
 TAO::PICurrent::check_validity (const PortableInterceptor::SlotId &identifier
                                 ACE_ENV_ARG_DECL)
 {
+  // If the slot_count is zero, no initialization has been done (if there are
+  // no slots, then the PICurrent_impl object is not created as there is no
+  // data to copy).
+  if (0 == this->slot_count_)
+    ACE_THROW (CORBA::BAD_INV_ORDER (CORBA::OMGVMCID | 14,
+                                     CORBA::COMPLETED_NO));
+
   // No need to acquire a lock for this check.  At this point, these
   // attributes are read only.
   if (identifier >= this->slot_count_)
@@ -96,29 +109,28 @@ TAO::PICurrent::_get_orb (ACE_ENV_SINGLE_ARG_DECL_NOT_USED)
   return CORBA::ORB::_duplicate (this->orb_core_.orb ());
 }
 
-int
+void
 TAO::PICurrent::initialize (PortableInterceptor::SlotId sc
-                            ACE_ENV_ARG_DECL_NOT_USED)
+                            ACE_ENV_ARG_DECL)
 {
-  this->slot_count_ = sc;
+  // Only allow a single initialization; sc is the number of
+  // allocated PICurrent data slots the end user wants. If 0
+  // PICurrent is not used, as no data is to be stored.
+  if ((0 == this->slot_count_) && (0 != sc))
+  {
+    // NOTE: This function not only adds the cleanup function
+    // but ALSO allocates the TSS slot PICurrent is to use.
+    // It MUST be called BEFORE we attempt to get/set any
+    // PICurrent slot data.
+    if (0 != orb_core_.add_tss_cleanup_func (cleanup, this->tss_slot_))
+      ACE_THROW (CORBA::NO_MEMORY (
+                   CORBA::SystemException::_tao_minor_code (
+                     TAO::VMCID,
+                     ENOMEM),
+                   CORBA::COMPLETED_NO));
 
-  if (this->tsc () == 0 && tss_slot_ == 0)
-    {
-      TAO::PICurrent_Impl *impl = 0;
-      ACE_NEW_RETURN (impl,
-                      TAO::PICurrent_Impl,
-                      0);
-
-      const int result = this->orb_core_.add_tss_cleanup_func (0,
-                                                               tss_slot_);
-
-      if (result != 0)
-        return result;
-
-      this->orb_core_.set_tss_resource (tss_slot_, impl);
-    }
-
-  return 0;
+    this->slot_count_ = sc;
+  }
 }
 
 TAO_END_VERSIONED_NAMESPACE_DECL
